@@ -1,6 +1,4 @@
-DIST v2.10.0.tar.gz 1195329 BLAKE2B 9bf889b6375c7abd5656fa1fac6785cbf691285ea04e1a04d642ed3f42b4a73c50dd79b0a9fef1f5a23e407e49df02c3ec10023b78c8d7cd089be8b59daccdfb SHA512 faaaf30484ae793732d929b5f4faad665a815fab49652782efeb51beab09062c9ff72b457ae2a7b3961d0206e913303a54a2c769d4a6f4e2429cabb6183c952f
-DIST v2.8.2.tar.gz 812526 BLAKE2B a268d5714dfaaa5b9d53a3cf64ef20401026612acd3dafca91f80b33d35b01527bbe0da58dfcc586caadcd14dab15a1d44bb6295e7fcc321def62c1690c9425c SHA512 9d0016c9d5800cc91310c83b2abd6285cb4f15a436642b8e52621595c206e0c27e013e42c63c646ca81a792d3534d790762db6853617ee9cef57cb2146fa8d0f
-EBUILD feedreader-2.10.0.ebuild 1168 BLAKE2B d44de7cc353e09a55b40738ba16d37658eb20afdaf343e45020f65fd7f9395a4c6cefe86a83b716da0f4a848e8a694407088524a97ee5d95d73f45ea7a15af0d SHA512 fa1d5039165d77da0f599046f6a7968e1c283fe93cdd57bcab427865f6f11d6f16e1fa6578046997ffe8a847cea70ffaf505fa066b7880b0e4e062dee8a6ac12
-EBUILD feedreader-2.8.2.ebuild 1168 BLAKE2B d44de7cc353e09a55b40738ba16d37658eb20afdaf343e45020f65fd7f9395a4c6cefe86a83b716da0f4a848e8a694407088524a97ee5d95d73f45ea7a15af0d SHA512 fa1d5039165d77da0f599046f6a7968e1c283fe93cdd57bcab427865f6f11d6f16e1fa6578046997ffe8a847cea70ffaf505fa066b7880b0e4e062dee8a6ac12
-MISC ChangeLog 2540 BLAKE2B d41b319160157f028fa4c3f5d77ac2ac2d3ebf62ecbc457898fa8b49cde49bcc6721a2241bef9aa2ea9ef4b29ee0ca5a978d1249c4e727097320d1bfee397cbe SHA512 c5ffcbbd967103965f09cfa7ca93ba26688ef676eaeec979669e41a449941a82eeee159d5625ec9c863530108dbd1b612ab0e5453e112e14f703e4e1c024d8b9
+DIST feedreader-2.11.0.tar.gz 1197626 BLAKE2B f7ce52ed2a61f8fa405852fe321d3ffafca60b206e3ba4493f15cace179a7f80a407fd32e46f932af6186cc91af5995a5a252bb9babede701f45b3ef403dbb38 SHA512 913fdbf61d1143320a455e843ef6f7223fbd5a371167745889880549e510ac2cdeaaa8256fc23508a94bd2da22003c9949a1e2a10e7f027c9f12aa113d6465c6
+EBUILD feedreader-2.11.0.ebuild 1244 BLAKE2B dbea554fbb7aafbd0dbc6f50e6dfe4d80ea94ec7d66dbfba18e4f7fc32055a4775ce6d5aad5f3d15c9874639fb476b1bf8645a0c57c6382b950e3f7bab95f2b0 SHA512 77e27a8311e0c8c865dab466d0d3f5bf1b53ca4c171ca98f108b780eb60e4236ec420d9a47dcc9398adb6a621869a9a5ef33e5461481b0d1a56d784c3d4df85b
+MISC ChangeLog 2746 BLAKE2B 7b8efbf4384aaa97083c37e647b9de4d603dee65b242935d519926029e9a1e04adbcc8f5537a92f56cea8d59489bb71f27fbbfd2f4041619ae23d11b3750168a SHA512 dc3f7c74481da7e2b4e6c255b99def6ddc55ae70c16f3b5f014f81884ebe01ca09939132e1a919074a3826416e5d60b0e4cf97fe82be1a2b7edb0e65b518b5b0
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
